no known errors

--- a/forms/ConfirmAccount.yaml
+++ b/forms/ConfirmAccount.yaml
@@ -63,5 +63,5 @@ components:
 container:
   type: ColumnPanel
   properties: {role: null, width: default, border: '', foreground: '', visible: true,
-    row_spacing: 10, wrap_on: mobile, spacing_above: none, col_widths: '{}', spacing_below: small,
+    row_spacing: 10, wrap_on: never, spacing_above: none, col_widths: '{}', spacing_below: small,
     background: ''}
