--- a/forms/Status.yaml
+++ b/forms/Status.yaml
@@ -13,4 +13,6 @@ components:
   event_bindings: {click: logout_button_click}
 container:
   type: ColumnPanel
-  properties: {col_widths: '{}'}
+  properties: {role: null, width: default, border: '', foreground: '', visible: true,
+    row_spacing: 10, wrap_on: never, spacing_above: small, col_widths: '{}', spacing_below: small,
+    background: ''}
