--- a/forms/Title.yaml
+++ b/forms/Title.yaml
@@ -1,6 +1,8 @@
 container:
   type: ColumnPanel
-  properties: {col_widths: '{}'}
+  properties: {role: null, width: default, border: '', foreground: '', visible: true,
+    row_spacing: 10, wrap_on: never, spacing_above: small, col_widths: '{}', spacing_below: small,
+    background: ''}
 components:
 - type: Label
   properties: {role: null, width: default, align: center, border: '', foreground: '',
