--- a/forms/PlayCatch.yaml
+++ b/forms/PlayCatch.yaml
@@ -1,13 +1,15 @@
 container:
   type: ColumnPanel
-  properties: {col_widths: '{"MUZYMN":10,"YRAZOJ":20,"CTMSFR":20,"SRGNIM":10}'}
+  properties: {role: null, width: default, border: '', foreground: '', visible: true,
+    row_spacing: 10, wrap_on: never, spacing_above: small, col_widths: '{"MUZYMN":10,"YRAZOJ":20,"CTMSFR":20,"SRGNIM":10}',
+    spacing_below: small, background: ''}
 components:
 - type: ColumnPanel
   properties: {}
   name: column_panel_1
   layout_properties: {grid_position: 'NQVCGY,GJZERQ'}
 - type: Canvas
-  properties: {role: null, width: default, height: 479, border: '', foreground: '',
+  properties: {role: null, width: default, height: 400, border: '', foreground: '',
     visible: true, spacing_above: small, spacing_below: small, background: '#a5d3e3'}
   name: canvas_1
   layout_properties: {grid_position: 'OKBFUH,XXVEVG'}
@@ -76,3 +78,4 @@ components:
   properties: {interval: 0.2}
   name: timer_1
   event_bindings: {tick: draw}
+item_type: {table_id: 7128}
