--- a/forms/_games.yaml
+++ b/forms/_games.yaml
@@ -105,7 +105,9 @@ container:
       ></div>\n</div>"}
 components:
 - type: ColumnPanel
-  properties: {col_widths: '{}'}
+  properties: {role: null, width: default, border: '', foreground: '', visible: true,
+    row_spacing: 10, wrap_on: never, spacing_above: small, col_widths: '{}', spacing_below: small,
+    background: ''}
   name: content_panel
   layout_properties: {slot: default}
   components: []
