--- a/forms/Title.yaml
+++ b/forms/Title.yaml
@@ -1,17 +1,11 @@
 container:
   type: ColumnPanel
-  properties: {role: null, width: default, border: '', foreground: '', visible: true,
-    row_spacing: 10, wrap_on: never, spacing_above: small, col_widths: '{}', spacing_below: small,
-    background: ''}
+  properties: {col_widths: '{}'}
 components:
 - type: Label
-  properties: {role: null, width: default, align: center, border: '', foreground: '',
-    visible: true, text: catch, font_size: 32, font: '', spacing_above: small, icon_align: left,
-    spacing_below: small, italic: true, background: '', bold: true, underline: false,
+  properties: {role: null, width: default, align: left, border: '', foreground: '',
+    visible: true, text: CATCH, font_size: 24, font: '', spacing_above: small, icon_align: left,
+    spacing_below: small, italic: false, background: '', bold: true, underline: false,
     icon: ''}
   name: label_1
-  layout_properties: {grid_position: 'KOVVGS,SBUYFA'}
-- type: Spacer
-  properties: {height: 50}
-  name: spacer_1
-  layout_properties: {grid_position: 'PTIZDY,BWDZVK'}
+  layout_properties: {grid_position: 'XXLJWK,VJNSCS'}
