--- a/forms/_play.yaml
+++ b/forms/_play.yaml
@@ -6,10 +6,11 @@ components:
   name: content_panel
   layout_properties: {slot: default}
   components:
-  - type: XYPanel
-    properties: {height: 100}
-    name: xy_panel_1
-    layout_properties: {grid_position: 'INWMAQ,FMLHFD'}
+  - type: LinearPanel
+    properties: {}
+    name: linear_panel_1
+    layout_properties: {grid_position: 'ICFBAL,LAYCGT'}
+    components: []
 - type: Label
   properties: {role: null, width: default, align: left, border: '', foreground: '',
     visible: true, text: Catch, font_size: null, font: '', spacing_above: small, icon_align: left,
