--- a/forms/Login.yaml
+++ b/forms/Login.yaml
@@ -1,7 +1,7 @@
 container:
   type: ColumnPanel
   properties: {role: null, width: default, border: '', foreground: '', visible: true,
-    row_spacing: 10, wrap_on: mobile, spacing_above: none, col_widths: '{}', spacing_below: small,
+    row_spacing: 10, wrap_on: never, spacing_above: none, col_widths: '{}', spacing_below: small,
     background: ''}
 components:
 - type: ColumnPanel
@@ -108,11 +108,3 @@ components:
   name: new_account
   layout_properties: {grid_position: 'WOJWGW,RSJQPH'}
   event_bindings: {change: new_account_change}
-- type: Button
-  properties: {role: null, width: default, align: center, border: '', enabled: true,
-    foreground: '', visible: false, text: Proceed to games, font_size: null, font: '',
-    spacing_above: small, icon_align: left, spacing_below: small, italic: false, background: '',
-    bold: true, underline: false, icon: ''}
-  name: continue_button
-  layout_properties: {grid_position: 'LZBQGR,IOBLXR'}
-  event_bindings: {click: continue_button_click}
