--- a/forms/_my_account.yaml
+++ b/forms/_my_account.yaml
@@ -6,15 +6,113 @@ components:
   name: content_panel
   layout_properties: {slot: default}
   components:
-  - type: LinearPanel
-    properties: {}
-    name: linear_panel_1
-    layout_properties: {grid_position: 'NCBEKS,ANONBG'}
-    components: []
-  - type: LinearPanel
-    properties: {}
-    name: linear_panel_2
-    layout_properties: {grid_position: 'GJWFJK,YGMZGT'}
+  - type: ColumnPanel
+    properties: {col_widths: '{}'}
+    name: column_panel_1
+    layout_properties: {grid_position: 'GOIVFQ,SLCDRX'}
+    components:
+    - type: Label
+      properties: {role: null, width: default, align: left, border: '', foreground: '',
+        visible: true, text: 'username:', font_size: null, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+        underline: false, icon: ''}
+      name: username
+      layout_properties: {grid_position: 'SQPTST,ZCWFRI'}
+    - type: Label
+      properties: {}
+      name: handle_label
+      layout_properties: {grid_position: 'SQPTST,HQKEQF'}
+    - type: Label
+      properties: {role: null, width: default, align: left, border: '', foreground: '',
+        visible: true, text: 'phone number:', font_size: null, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+        underline: false, icon: ''}
+      name: label_2
+      layout_properties: {grid_position: 'LGHALA,DWSBRK'}
+    - type: Label
+      properties: {}
+      name: phone_number_label
+      layout_properties: {grid_position: 'LGHALA,SJVFVE'}
+    - type: Label
+      properties: {role: null, width: default, align: left, border: '', foreground: '',
+        visible: true, text: 'throws:', font_size: null, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+        underline: false, icon: ''}
+      name: label_3
+      layout_properties: {grid_position: 'TDRBCH,TFQYVE'}
+    - type: Label
+      properties: {}
+      name: throws_label
+      layout_properties: {grid_position: 'TDRBCH,DTJRYF'}
+    - type: Spacer
+      properties: {height: 32}
+      name: spacer_3
+      layout_properties: {grid_position: 'PSOPTF,LSUDKP'}
+    - type: Label
+      properties: {role: null, width: default, align: left, border: '', foreground: '',
+        visible: true, text: color 1, font_size: null, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+        underline: false, icon: ''}
+      name: color1
+      layout_properties: {grid_position: 'LHIFPN,XGKQXW'}
+    - type: TextBox
+      properties: {role: null, width: default, align: left, hide_text: false, placeholder: '#AA9900',
+        border: '', enabled: false, foreground: '', visible: true, text: '', font_size: null,
+        font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
+        background: '', bold: false, underline: false}
+      name: text_box_3
+      layout_properties: {grid_position: 'LHIFPN,EMXWFA'}
+    - type: Label
+      properties: {role: null, width: default, align: left, border: '', foreground: '#fefcfc',
+        visible: true, text: color 2, font_size: null, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+        underline: false, icon: ''}
+      name: color2
+      layout_properties: {grid_position: 'TVJLMY,JRBJAV'}
+    - type: TextBox
+      properties: {role: null, width: default, align: left, hide_text: false, placeholder: '#000000',
+        border: '', enabled: false, foreground: '', visible: true, text: '', font_size: null,
+        font: '', spacing_above: small, type: text, spacing_below: small, italic: false,
+        background: '', bold: false, underline: false}
+      name: text_box_4
+      layout_properties: {grid_position: 'TVJLMY,KFDVQG'}
+    - type: Spacer
+      properties: {height: 32}
+      name: spacer_4
+      layout_properties: {grid_position: 'YJXASR,VETKQK'}
+    - type: Button
+      properties: {role: null, width: default, align: left, border: '', enabled: true,
+        foreground: '', visible: true, text: 'change password:', font_size: null,
+        font: '', spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+        background: '', bold: false, underline: false, icon: ''}
+      name: reset_button
+      layout_properties: {grid_position: 'FCHOVQ,YNOGYZ'}
+      event_bindings: {click: button_2_click}
+    - type: TextBox
+      properties: {role: null, width: default, align: left, hide_text: false, placeholder: '',
+        border: '', enabled: true, foreground: '', visible: false, text: new password,
+        font_size: null, font: '', spacing_above: small, type: text, spacing_below: small,
+        italic: false, background: '', bold: false, underline: false}
+      name: text_box_1
+      layout_properties: {grid_position: 'FCHOVQ,IRAKSC LNGUDF,GOZWPQ'}
+    - type: TextBox
+      properties: {role: null, width: default, align: left, hide_text: false, placeholder: '',
+        border: '', enabled: true, foreground: '', visible: false, text: confirm password,
+        font_size: null, font: '', spacing_above: small, type: text, spacing_below: small,
+        italic: false, background: '', bold: false, underline: false}
+      name: text_box_2
+      layout_properties: {grid_position: 'FCHOVQ,IRAKSC LMPERE,KQHKCF'}
+    - type: Spacer
+      properties: {height: 32}
+      name: spacer_2
+      layout_properties: {grid_position: 'NKIZOZ,FDCIZK'}
+    - type: Button
+      properties: {role: null, width: default, align: center, border: '', enabled: true,
+        foreground: '', visible: true, text: reset, font_size: null, font: '', spacing_above: small,
+        icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+        underline: false, icon: ''}
+      name: reset_go_button
+      layout_properties: {grid_position: 'NKIZOZ,HVBQMY'}
 - type: Label
   properties: {role: null, width: default, align: left, border: '', foreground: '',
     visible: true, text: Catch, font_size: 22, font: '', spacing_above: small, icon_align: left,
@@ -28,7 +126,7 @@ components:
   layout_properties: {slot: nav-right}
 - type: Button
   properties: {role: null, width: default, align: center, border: '', enabled: true,
-    foreground: '', visible: true, text: Add Contacts, font_size: 18, font: '', spacing_above: small,
+    foreground: '', visible: true, text: Go to games, font_size: 18, font: '', spacing_above: small,
     icon_align: left, spacing_below: small, italic: false, background: '#92bf89',
     bold: true, underline: false, icon: ''}
   name: button_1
@@ -46,14 +144,6 @@ components:
   name: logout_button
   layout_properties: {slot: nav-right}
   event_bindings: {click: logout_button_click}
-- type: Button
-  properties: {role: null, width: default, align: center, border: '', enabled: true,
-    foreground: '', visible: true, text: My Account, font_size: null, font: '', spacing_above: small,
-    icon_align: left, spacing_below: small, italic: false, background: '#929191',
-    bold: false, underline: false, icon: ''}
-  name: cccount
-  layout_properties: {slot: sidebar}
-  event_bindings: {click: cccount_click}
 container:
   type: HtmlTemplate
   properties: {html: "<link href=\"https://fonts.googleapis.com/css?family=Roboto\"\
