--- a/forms/_my_account.yaml
+++ b/forms/_my_account.yaml
@@ -7,7 +7,9 @@ components:
   layout_properties: {slot: default}
   components:
   - type: ColumnPanel
-    properties: {col_widths: '{}'}
+    properties: {role: null, width: default, border: '', foreground: '', visible: true,
+      row_spacing: 10, wrap_on: never, spacing_above: small, col_widths: '{}', spacing_below: small,
+      background: ''}
     name: column_panel_1
     layout_properties: {grid_position: 'GOIVFQ,SLCDRX'}
     components:
@@ -108,7 +110,7 @@ components:
       layout_properties: {grid_position: 'NKIZOZ,FDCIZK'}
     - type: Button
       properties: {role: null, width: default, align: center, border: '', enabled: true,
-        foreground: '', visible: true, text: reset, font_size: null, font: '', spacing_above: small,
+        foreground: '', visible: false, text: reset, font_size: null, font: '', spacing_above: small,
         icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
         underline: false, icon: ''}
       name: reset_go_button
@@ -122,7 +124,7 @@ components:
   layout_properties: {slot: title}
 - type: Label
   properties: {}
-  name: handle
+  name: handle_label_top
   layout_properties: {slot: nav-right}
 - type: Button
   properties: {role: null, width: default, align: center, border: '', enabled: true,
