--- a/forms/GameListElement.yaml
+++ b/forms/GameListElement.yaml
@@ -49,8 +49,7 @@ components:
   layout_properties: {grid_position: 'RUFVXB,PUTLJR'}
   data_bindings:
   - {property: selected, code: 'self.item[''dual''][''initiator_has_ball'']'}
-- type: Spacer
-  properties: {height: 30}
-  name: spacer_1
-  layout_properties: {grid_position: 'GGUSQR,WZLBYF'}
 item_type: {table_id: 7128}
+custom_component: true
+events:
+- {name: click, default_event: true, description: when whole element is clicked}
