--- a/forms/AddContacts.yaml
+++ b/forms/AddContacts.yaml
@@ -1,14 +1,14 @@
 components:
 - type: Label
   properties: {role: null, width: default, align: center, border: '', foreground: '',
-    visible: true, text: Add friends to play Catch!, font_size: null, font: '', spacing_above: medium,
-    icon_align: left, spacing_below: large, italic: false, background: '', bold: true,
-    underline: false, icon: ''}
+    visible: true, text: 'Add a friend with their phone number:', font_size: 18, font: '',
+    spacing_above: medium, icon_align: left, spacing_below: large, italic: false,
+    background: '', bold: true, underline: false, icon: ''}
   name: label_get_contacts
   layout_properties: {grid_position: 'OROBJO,DMOCEV'}
 - type: Label
   properties: {role: null, width: default, align: left, border: '', foreground: '',
-    visible: true, text: 'Phone number:', font_size: null, font: '', spacing_above: none,
+    visible: true, text: 'Phone number:', font_size: 18, font: '', spacing_above: none,
     icon_align: left, spacing_below: none, italic: false, background: '', bold: false,
     underline: false, icon: ''}
   name: label_phone
@@ -23,16 +23,16 @@ components:
   event_bindings: {click: why_phone_click}
 - type: TextBox
   properties: {role: null, width: default, align: left, hide_text: false, placeholder: '1234567890',
-    border: '', enabled: true, foreground: '', visible: true, text: '', font_size: null,
+    border: '', enabled: true, foreground: '', visible: true, text: '', font_size: 18,
     font: '', spacing_above: none, type: telephone, spacing_below: small, italic: false,
     background: '', bold: false, underline: false}
   name: phone
   layout_properties: {grid_position: 'POHKFA,GVXPJM'}
   event_bindings: {pressed_enter: phone_pressed_enter}
 - type: Button
-  properties: {role: null, width: default, align: center, border: '', enabled: true,
+  properties: {role: null, width: default, align: right, border: '', enabled: true,
     foreground: '', visible: true, text: Add Contact, font_size: null, font: '', spacing_above: none,
-    icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
+    icon_align: left, spacing_below: small, italic: false, background: '', bold: true,
     underline: false, icon: ''}
   name: go_button
   layout_properties: {grid_position: 'POHKFA,PHDVEA', row_background: ''}
