--- a/forms/GameListElement.yaml
+++ b/forms/GameListElement.yaml
@@ -1,54 +1,54 @@
 container:
   type: ColumnPanel
   properties: {role: null, width: default, border: 'True', foreground: '', visible: true,
-    row_spacing: 10, wrap_on: never, spacing_above: small, col_widths: '{"TJKSBI":10}',
-    spacing_below: small, background: ''}
+    row_spacing: 10, wrap_on: never, spacing_above: small, col_widths: '{}', spacing_below: small,
+    background: ''}
 components:
-- type: Label
-  properties: {role: null, width: default, align: left, border: '', foreground: '',
-    visible: true, text: 'Game with:', font_size: null, font: '', spacing_above: small,
-    icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-    underline: false, icon: ''}
-  name: label_1
-  layout_properties: {grid_position: 'CLYICX,ZIBOSR'}
-  data_bindings:
-  - {property: bold, code: 'self.item[''game_ongoing'']'}
-- type: Label
-  properties: {}
-  name: friend_label
-  layout_properties: {grid_position: 'CLYICX,ICOQUP'}
-  data_bindings: []
-- type: Label
-  properties: {}
-  name: num_throws
-  layout_properties: {grid_position: 'CLYICX,TJKSBI'}
-- type: Button
-  properties: {role: null, width: default, align: right, border: '', enabled: true,
-    foreground: '', visible: true, text: Have a catch, font_size: null, font: '',
-    spacing_above: small, icon_align: left, spacing_below: small, italic: false, background: '#92bf89',
-    bold: true, underline: false, icon: ''}
-  name: play_button
-  layout_properties: {grid_position: 'CLYICX,EBHLET'}
-  event_bindings: {click: play_button_click}
-- type: RadioButton
-  properties: {role: null, selected: false, width: default, align: left, border: '',
-    enabled: false, foreground: '', value: '', visible: true, text: You have ball,
-    font_size: null, font: '', spacing_above: none, spacing_below: none, italic: false,
-    background: '', bold: false, group_name: '', underline: false}
-  name: player_ball
-  layout_properties: {grid_position: 'RUFVXB,SZECZQ'}
-  data_bindings:
-  - {property: selected, code: 'self.item[''initiator_has_ball'']'}
-  - {property: bold, code: 'self.item[''initiator_has_ball'']'}
-- type: RadioButton
-  properties: {role: null, selected: false, width: default, align: right, border: '',
-    enabled: false, foreground: '', value: '', visible: true, text: Friend has ball,
-    font_size: null, font: '', spacing_above: none, spacing_below: none, italic: false,
-    background: '', bold: false, group_name: '', underline: false}
-  name: friend_ball
-  layout_properties: {grid_position: 'RUFVXB,PUTLJR'}
-  data_bindings:
-  - {property: selected, code: 'self.item[''dual''][''initiator_has_ball'']'}
+- type: ColumnPanel
+  properties: {col_widths: '{}'}
+  name: card_content
+  layout_properties: {grid_position: 'QUMGQI,KEWNOY'}
+  components:
+  - type: Link
+    properties: {role: null, width: default, align: left, border: '', foreground: '',
+      visible: true, text: '', font_size: null, row_spacing: 10, wrap_on: never, font: '',
+      spacing_above: small, icon_align: left, col_widths: '{}', spacing_below: small,
+      italic: false, background: '', bold: false, underline: false, icon: ''}
+    name: game_summary
+    layout_properties: {grid_position: 'VCCQBS,OLBDSW'}
+    components:
+    - type: Label
+      properties: {role: null, width: default, align: left, border: '', foreground: '',
+        visible: true, text: '', font_size: 22, font: '', spacing_above: small, icon_align: left,
+        spacing_below: small, italic: false, background: '', bold: true, underline: false,
+        icon: ''}
+      name: you_label
+      layout_properties: {grid_position: 'ZWEYBN,SJLVYU BDVULM,ZCEBQQ'}
+      data_bindings: []
+    - type: Label
+      properties: {}
+      name: status_label
+      layout_properties: {grid_position: 'ZWEYBN,SJLVYU XMUFNC,GPHAUW'}
+    - type: Label
+      properties: {role: null, width: default, align: right, border: '', foreground: '',
+        visible: true, text: '', font_size: 18, font: '', spacing_above: small, icon_align: left,
+        spacing_below: small, italic: false, background: '', bold: false, underline: false,
+        icon: ''}
+      name: num_throws
+      layout_properties: {grid_position: 'ZWEYBN,CYDJHW LULAVT,GPTJRJ'}
+    - type: Button
+      properties: {role: null, width: default, align: right, border: '', enabled: true,
+        foreground: '', visible: true, text: Start New Game, font_size: 18, font: '',
+        spacing_above: small, icon_align: left, spacing_below: small, italic: false,
+        background: '#92bf89', bold: true, underline: false, icon: ''}
+      name: play_button
+      layout_properties: {grid_position: 'ZWEYBN,CYDJHW YUQPUR,ORZLDW'}
+      event_bindings: {click: play_button_click}
+    event_bindings: {click: expand}
+  - type: ColumnPanel
+    properties: {}
+    name: game_view
+    layout_properties: {grid_position: 'PUYBPX,ENQFEK'}
 item_type: {table_id: 7128}
 custom_component: true
 events:
