--- a/forms/PlayWall.yaml
+++ b/forms/PlayWall.yaml
@@ -9,7 +9,7 @@ components:
   components:
   - type: Canvas
     properties: {role: null, width: default, height: '110', border: '', foreground: '',
-      visible: true, spacing_above: small, spacing_below: small, background: '#a5d3e3'}
+      visible: true, spacing_above: small, spacing_below: small, background: '#89bbcd'}
     name: canvas_1
     layout_properties: {grid_position: 'BCMADU,PJNASK'}
   event_bindings: {click: throw_button_click}
@@ -49,5 +49,5 @@ components:
 container:
   type: ColumnPanel
   properties: {role: null, width: default, border: '', foreground: '', visible: true,
-    row_spacing: 10, wrap_on: never, spacing_above: small, col_widths: '{"MUZYMN":15,"YRAZOJ":15,"CTMSFR":15,"SRGNIM":15}',
+    row_spacing: 10, wrap_on: never, spacing_above: small, col_widths: '{"QGMGLS":15,"YOVYYG":22}',
     spacing_below: small, background: ''}
