--- a/forms/GameListElement.yaml
+++ b/forms/GameListElement.yaml
@@ -5,9 +5,11 @@ container:
     background: ''}
 components:
 - type: ColumnPanel
-  properties: {col_widths: '{}'}
+  properties: {role: null, width: default, border: '', foreground: '', visible: true,
+    row_spacing: 10, wrap_on: mobile, spacing_above: small, col_widths: '{}', spacing_below: small,
+    background: ''}
   name: card_content
-  layout_properties: {grid_position: 'QUMGQI,KEWNOY'}
+  layout_properties: {grid_position: 'QUMGQI,KEWNOY', full_width_row: true}
   components:
   - type: Link
     properties: {role: null, width: default, align: left, border: '', foreground: '',
@@ -46,9 +48,11 @@ components:
       event_bindings: {click: play_button_click}
     event_bindings: {click: expand}
   - type: ColumnPanel
-    properties: {}
+    properties: {role: null, width: default, border: '', foreground: '', visible: true,
+      row_spacing: 10, wrap_on: mobile, spacing_above: small, col_widths: '', spacing_below: small,
+      background: ''}
     name: game_view
-    layout_properties: {grid_position: 'PUYBPX,ENQFEK'}
+    layout_properties: {grid_position: 'PUYBPX,ENQFEK', full_width_row: true}
 item_type: {table_id: 7128}
 custom_component: true
 events:
