--- a/forms/PlayWall.yaml
+++ b/forms/PlayWall.yaml
@@ -5,13 +5,13 @@ components:
     spacing_above: small, icon_align: left, col_widths: '{}', spacing_below: small,
     italic: false, background: '', bold: false, underline: false, icon: ''}
   name: link_1
-  layout_properties: {grid_position: 'OKBFUH,MQQUEU'}
+  layout_properties: {grid_position: 'OKBFUH,MQQUEU', full_width_row: true}
   components:
   - type: Canvas
     properties: {role: null, width: default, height: '100', border: '', foreground: '',
       visible: true, spacing_above: small, spacing_below: small, background: '#89bbcd'}
     name: canvas_1
-    layout_properties: {grid_position: 'BCMADU,PJNASK'}
+    layout_properties: {grid_position: 'BCMADU,PJNASK', full_width_row: true}
   event_bindings: {click: throw_button_click}
 - type: RadioButton
   properties: {role: null, selected: false, width: default, align: left, border: '',
