--- a/forms/GameListElement.yaml
+++ b/forms/GameListElement.yaml
@@ -4,12 +4,11 @@ container:
     row_spacing: 10, wrap_on: never, spacing_above: small, col_widths: '{}', spacing_below: small,
     background: ''}
 components:
-- type: ColumnPanel
+- type: LinearPanel
   properties: {role: null, width: default, border: '', foreground: '', visible: true,
-    row_spacing: 10, wrap_on: never, spacing_above: small, col_widths: '{}', spacing_below: small,
-    background: ''}
+    row_spacing: 10, spacing_above: small, spacing_below: small, background: ''}
   name: card_content
-  layout_properties: {grid_position: 'QUMGQI,KEWNOY', full_width_row: true}
+  layout_properties: {grid_position: 'EJLVNM,PNQTCR', full_width_row: true}
   components:
   - type: Link
     properties: {role: null, width: default, align: left, border: '', foreground: '',
@@ -47,12 +46,10 @@ components:
       layout_properties: {grid_position: 'ZWEYBN,CYDJHW YUQPUR,ORZLDW'}
       event_bindings: {click: play_button_click}
     event_bindings: {click: expand}
-  - type: ColumnPanel
-    properties: {role: null, width: default, border: '', foreground: '', visible: true,
-      row_spacing: 10, wrap_on: never, spacing_above: small, col_widths: '', spacing_below: small,
-      background: ''}
+  - type: LinearPanel
+    properties: {}
     name: game_view
-    layout_properties: {grid_position: 'PUYBPX,ENQFEK', full_width_row: true}
+    layout_properties: {}
 item_type: {table_id: 7128}
 custom_component: true
 events:
